<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">רשימת קניות</string>

    <!-- Mode buttons -->
    <string name="planning_mode">תכנון</string>
    <string name="shopping_mode">קניות</string>

    <!-- Statistics -->
    <string name="items_left">פריטים נותרו</string>
    <string name="items_done">פריטים הושלמו</string>
    <string name="items_left_placeholder">%1$d פריטים נותרו</string>
    <string name="items_done_placeholder">%1$d פריטים הושלמו</string>
    <string name="shopping_empty_remaining">הכל נקנה! הקישו על הפריטים שהושלמו כדי לראות אותם</string>
    <string name="show_purchased_items">הצג פריטים שנרכשו</string>
    <string name="hide_purchased_items">הסתר פריטים שנרכשו</string>


    <!-- Dialog titles -->
    <string name="add_section">הוסף קטגוריה חדשה</string>
    <string name="edit_section">ערוך קטגוריה</string>
    <string name="delete_section">מחק קטגוריה</string>
    <string name="add_item">הוסף פריט</string>
    <string name="add_ad_hoc_item">הוסף פריט נוסף</string>
    <string name="edit_item">ערוך פריט</string>
    <string name="delete_item">מחק פריט</string>
    <string name="move_item">העבר פריט</string>
    <string name="move_item_to_section">העבר \"%1$s\" ל...</string>
    <string name="confirm_reset_all_title">איפוס רשימת קניות</string>
    <string name="confirm_reset_shopping_list_title">איפוס קנייה נוכחית</string>


    <!-- Dialog buttons -->
    <string name="add">הוסף</string>
    <string name="save">שמור</string>
    <string name="delete">מחק</string>
    <string name="cancel">ביטול</string>
    <string name="reset_action">איפוס</string>

    <!-- Dialog messages -->
    <string name="delete_section_message">האם אתה בטוח שברצונך למחוק את \"%1$s\"? הפריטים יועברו לקטגוריית \"לא מוקצה\".</string>
    <string name="delete_item_message">האם אתה בטוח שברצונך למחוק את \"%1$s\"?</string>
    <string name="no_other_sections_to_move">אין קטגוריות אחרות להעביר את פריט זה.</string>
    <string name="confirm_reset_shopping_list_message">האם אתה בטוח שברצונך לאפס את הקנייה הנוכחית? כל הפריטים יחזרו למצב לא מסומן, וכל הפריטים שנוספו במהלך הקניות האלו יוסרו.</string>
    <string name="confirm_reset_all_message">פעולה זו תמחק את כל הקטגוריות והפריטים מהרשימה. האם אתה בטוח?</string>


    <!-- Input hints -->
    <string name="enter_section_name">הכנס שם קטגוריה</string>
    <string name="enter_item_name">הכנס שם פריט</string>
    <string name="edit_quantity">ערוך כמות</string>
    <string name="enter_quantity">הכנס כמות</string>

    <!-- Default sections -->
    <string name="unassigned">לא מוקצה</string>
    <string name="produce">ירקות ופירות</string>
    <string name="dairy">מוצרי חלב</string>
    <string name="meat">בשר</string>p
    <string name="pantry">מזווה</string>
    <string name="frozen">קפוא</string>
    <string name="beverages">משקאות</string>
    <string name="household">בית</string>

    <!-- Sample items -->
    <string name="apples">תפוחים</string>
    <string name="bananas">בננות</string>
    <string name="milk">חלב</string>
    <string name="cheese">גבינה</string>
    <string name="chicken_breast">חזה עוף</string>
    <string name="ground_beef">בשר טחון</string>
    <string name="pasta">פסטה</string>
    <string name="rice">אורז</string>
    <string name="ice_cream">גלידה</string>
    <string name="frozen_vegetables">ירקות קפואים</string>
    <string name="coffee">קפה</string>
    <string name="tea">תה</string>
    <string name="paper_towels">מגבות נייר</string>
    <string name="dish_soap">נוזל כלים</string>

    <!-- Item count -->
    <string name="item_count">פריטים</string>

    <!-- Menu Actions -->
    <string name="action_reset_all">איפוס רשימת קניות</string>
    <string name="action_share_list">שיתוף רשימה</string>
    <string name="action_share_shortage_list">שיתוף רשימת חוסרים</string>
    <string name="action_import_list_txt">קבלת רשימה</string>
    <string name="action_reset_shopping_list">איפוס קנייה נוכחית</string>

    <!-- Content Descriptions -->
    <string name="add_new_section">Add new section</string>
    <string name="content_description_decrease_quantity">Decrease quantity</string>
    <string name="content_description_increase_quantity">Increase quantity</string>
    <string name="content_description_move_item">Move Item</string>
    <string name="content_description_edit_item">Edit Item</string>
    <string name="content_description_delete_item">Delete Item</string>
    <string name="content_description_item_details">פרטי פריט</string>
    <string name="content_description_item_image">תמונה מצורפת</string>
    <string name="content_description_item_link">קישור מצורף</string>
    <string name="content_description_item_image_preview">תצוגת תמונת פריט</string>

    <!-- Item details -->
    <string name="item_details_title">פרטי פריט</string>
    <string name="item_details_action">פרטים</string>
    <string name="attach_image">הוסף תמונה</string>
    <string name="remove_image">הסר תמונה</string>
    <string name="item_link_hint">קישור למוצר</string>
    <string name="open_link">פתח קישור</string>
    <string name="link_missing_message">אין קישור לפריט זה</string>
    <string name="invalid_link_message">קישור לא תקין</string>
    <string name="attach_image_take_photo">צלם תמונה</string>
    <string name="attach_image_choose_gallery">בחר מהגלריה</string>
    <string name="attach_image_dialog_title">הוסף תמונה</string>
</resources>